--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,193 @@
-.App {
+:root {
+  --main-color: #ffffff;
+  --secondary-color: #b4b7b8;
+  --secondary-complimentary: rgb(91, 92, 92);
+  --main-complimentary: #202020;
+}
+body {
+  background-color: var(--main-color);
+  color: var(--main-complimentary);
+  padding: 1rem;
+  letter-spacing: 1.5px;
+  font-family: "PT Sans", sans-serif;
+  overflow-x: hidden;
+}
+.all-posts {
+  margin: 2rem;
+}
+.all-posts > h2 {
+  display: flex;
+  justify-content: center;
+  font-size: 1.5rem;
+  margin: 0 auto;
+}
+.btn,
+.btn-edit {
+  border: none;
+  border-radius: 10px;
+  padding: 0.5rem;
+  background-color: var(--main-complimentary);
+  color: var(--main-color);
+}
+.btn-create {
+  position: absolute;
+  right: 1rem;
+  top: 2rem;
+  border: none;
+}
+.btn:hover {
+  cursor: pointer;
+}
+.btn-create:hover {
+  cursor: pointer;
+}
+
+.create > h3,
+.create > form {
+  color: var(--main-complimentary);
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.create > form {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.form-group {
+  margin-bottom: 1rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-control {
+  padding: 0.5rem 0;
+  text-indent: 0.5rem;
+  border-radius: 8px;
+  border: 1.5px solid var(--secondary-color);
+}
+label {
+  display: inline-block;
+  width: 140px;
+  text-align: right;
+  margin-right: 1rem;
+  font-size: 18px;
+}
+.btn-primary {
+  display: block;
+  margin: 1rem auto 0 auto;
+  text-transform: uppercase;
+  padding: 1rem;
+  font-size: 18px;
+}
+.home-container {
+  display: flex;
+  flex-direction: column;
+  color: var(--main-complimentary);
+  border: 1px solid var(--main-complimentary);
+  border-radius: 10px;
+  padding: 0 1rem;
+  margin: 2rem;
+}
+.home-title {
+  font-size: 2rem;
+  text-align: center;
+}
+.home-content {
+  overflow: hidden;
+  line-height: 2rem;
+  max-height: 8rem;
+  -webkit-box-orient: vertical;
+  display: block;
+  display: -webkit-box;
+  overflow: hidden !important;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+}
+.home-author {
+  font-size: 18px;
+  text-align: center;
+}
+.home-date {
+  display: block;
+  text-align: center;
+}
+.home-controls {
+  margin: 2rem;
+}
+.btn-edit,
+.btn-delete {
+  width: 6rem;
+}
+.btn-edit {
+  background-color: var(--main-complimentary);
+  margin: 0 2rem 2rem 0;
+}
+.btn-delete {
+  background-color: red;
+}
+.logo {
+  background-color: transparent;
+  color: var(--main-complimentary);
+  border: 1px solid var(--secondary-color);
+  border-radius: 10px;
+  font-size: 45px;
+  letter-spacing: 10px;
+  margin-top: 1rem;
+}
+.logo:hover {
+  cursor: pointer;
+}
+.post {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--main-complimentary);
+}
+.post-content {
+  margin: 2rem 4rem;
+}
+a {
+  text-decoration: none;
+  color: var(--main-complimentary);
+}
+.create-txt {
+  font-size: 21px;
+}
+.no-post {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  margin: 5rem auto;
+}
+footer {
+  position: absolute;
+  background-color: var(--main-complimentary);
+  color: var(--main-color);
+  width: 100%;
+  margin-top: 6rem;
+  /*  */
+  box-shadow: 0 0 0 100vmax var(--main-complimentary);
+  clip-path: inset(0 -100vmax);
+  /*  */
+}
+.links{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem;
+}
+.footer-logo {
+  /* -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  transform: rotate(-90deg); */
+  margin: 2rem auto;
+  padding: 0;
+  color: var(--main-color);
+  padding: 1rem;
+}
+ion-icon {
+  font-size: 2rem;
+  margin:  2rem;
+  color: var(--main-color);
 }
